# dream-nn

./: .gitignore  BENCHMARK_QUICKSTART.md  CHANGELOG.md  LICENSE  README.md  first.md  pyproject.toml  run_benchmarks.sh  tech_report_1.md  text.md
.github/workflows/: publish.yml  tests.yml
dream/: __init__.py  cell.py  config.py  layer_coordinated.py  state.py
dream/benchmarks/: __init__.py  run_all.py  run_all_benchmarks.py
dream/layers/: coordination.py  sleep_consolidation.py  surprise_gate.py
examples/: EXPERIMENTS.md  README.md  train.py  trainer.py
sanday/: model.py  run_train.py  run_train_2stage.py  train.py  train_2stage.py
tests/: test_001_overfit.py  test_dream.py
tests/benchmarks/: PAPER_TEMPLATE.md  QUICKSTART.md  README.md  __init__.py  models.py  run_all.py  test_01_basic_asr.py  test_02_speaker_adaptation.py  test_03_noise_robustness.py  test_04_stack_coordination.py  test_05_hierarchy.py  utils.py  visualize.py
