[project]
name = "dreamnn"
version = "0.1.4"
description = "DREAM: Dynamic Recall and Elastic Adaptive Memory — PyTorch CTRNN with surprise-driven plasticity"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Manifestro Team", email = "hello@manifestro.io" }
]
keywords = [
    "deep-learning",
    "rnn",
    "ctrnn",
    "liquid-time-constant",
    "surprise",
    "plasticity",
    "adaptive-memory",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
audio = [
    "librosa>=0.10.0",
    "torchaudio>=2.0.0",
    "matplotlib>=3.7.0",
]
asr = [
    "librosa>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/karl4th/dream-nn"
Repository = "https://github.com/karl4th/dream-nn.git"
Documentation = "https://dream-nn.readthedocs.io/"
"Bug Tracker" = "https://github.com/karl4th/dream-nn/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dream"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
